       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.

In 0.11:
--------
patchlevel 11:
        - switchActivateClient (used by the taskbar or the current
           session manager) ensures visibility of the window according
           to the user's current placement policy
        - focus warning box appears only one time per session now.
        - visual feedback when preparing the session for logout
        - new command "go:other" which will kill all modules and 
           replace kwm with the other process.
        

patchlevel 10:
        - Warning message for crappy focus policies only occurs with Alt-Tab now.
            The ACTIVATE_WINDOW client message (used by modules such as 
            kpanel(taskbar) and kpager) will be interpreted as change-to-the-desktop-
            and-raise-the-window instead.



patchlevel 9 (CT - 27May98):
	- SnapToWindow and SnapToBorder FUNCTIONS replaced with snapIt. The
	    user-visible configurability remains the same. The on-screen
	    effect is nonetheless improved.
	- replaced "shaded" option by "shadedHorizontal" and "shadedVertical".
	   For the moment it seems vertical shading is much more rapid (of
	   course, much less gradient steps to calculate in KPixmap).
                - small bugfix to allow runtime switching between vertical and horizontal (Matthias)
                - small fix to avoid a double calling of Manager::sendConfig after a 
                   drag/resize in opaque mode(Matthias)
                - bugfix for double buffering (confusing dst and src in bitBlt is a bad idea....)
  
patchlevel 8:
        - WindowResizeType=Opaque improved. No more flickering and a 